fin du script js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>Ma liste de tâches</h1>
     
+    <input id="taskInput" placeholder="Nouvelle tâche">
+    <button id="addBtn">Ajouter</button>
+
+    <ul id="taskList"></ul>
+    <p id="compteur"></p>
+    <button id="clearBtn">Tout effacer</button>
 </body>
 </html>
